--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "CDB",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mqtt": "^4.3.7",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.18.0"
   },
   "devDependencies": {}
