--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://cdb:Faculdade18@cluster0.mvho6.mongodb.net/?retryWrites=true&w=majority
 SECRET = 321654
+"secret" = "321654"
