--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 MONGODB_URI=mongodb+srv://cdb:Faculdade18@cluster0.mvho6.mongodb.net/?retryWrites=true&w=majority
-SECRET = 321654
-"secret" = "321654"
+SECRET = "321654"
