--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.3",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1",
+    "mongoose": "^6.5.2",
     "mqtt": "^4.3.7",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
