--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "mqtt": "^4.3.7",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.18.0"
-  },
-  "devDependencies": {}
+  }
 }
