--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.5.2",
     "mqtt": "^4.3.7",
     "mysql": "^2.18.1",
