--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
     "public": true,
     "build":
      {
-        
+        "src": "api/index.js",
+        "use": "@vercel/node"
          },
     "routes":[
         {
