--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
  
     "version": 2,
     "public": true,
-    "build":
+    "builds":[
      {
         "src": "api/index.js",
         "use": "@vercel/node"
-         },
+         }],
     "routes":[
         {
         "src": "/(.*)",
