--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
  
     "version": 2,
     "public": true,
-    "build":[
+    "builds":[
      {
         "src": "api/index.js",
         "use": "@vercel/node"
