--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.18.0",
+    "socket.io": "^4.7.5",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
