--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.5.0",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.3",
+    "express-validator": "^7.1.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
@@ -28,9 +30,12 @@
     "mqtt": "^4.3.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "puppeteer": "^22.12.1",
+    "qrcode": "^1.5.3",
     "sequelize": "^6.18.0",
     "socket.io": "^4.7.5",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "whatsapp-web.js": "^1.24.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
