--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^2.3.3",
     "puppeteer": "^22.12.1",
     "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.18.0",
     "socket.io": "^4.7.5",
     "webpack": "^5.89.0",
