--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "sequelize": "^6.18.0",
     "socket.io": "^4.7.5",
     "webpack": "^5.89.0",
-    "whatsapp-web.js": "^1.24.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
